--- a/lab6,7,8,9/MainWindow.xaml
+++ b/lab6,7,8,9/MainWindow.xaml
@@ -50,7 +50,7 @@
                             <RowDefinition/>
                             <RowDefinition/>
                             <RowDefinition/>
-                            
+
                         </Grid.RowDefinitions>
                         <TextBox x:Name="tbElementQueue" Margin="10 20"
                                  Grid.Row="0"/>
@@ -83,37 +83,26 @@
                     </Grid>
                 </Grid>
             </TabItem>
-            <TabItem Header="Словари" Height="31" VerticalAlignment="Top">
+            <TabItem Header="Словари">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="4*"/>
-                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="13*"/>
+                        <ColumnDefinition Width="58*"/>
+                        <ColumnDefinition Width="71*"/>
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                            Margin="10" Content="Играть" FontSize="30" />
-                    <ListView Name="Ishod" Grid.Row="1" Grid.Column="0" Margin="10">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Number}" Width="50">Номер</GridViewColumn>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=First}" Width="150">Кость 1</GridViewColumn>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Second}" Width="150">Кость 2</GridViewColumn>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Summa}" Width="150">Сумма</GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                    <ListView Name="Results" Grid.Row="1" Grid.Column="1" Margin="10">
-                        <ListView.View>
-                            <GridView>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Key}" Width="100">Исход</GridViewColumn>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Prob}" Width="200">Процент симуляции</GridViewColumn>
-                                <GridViewColumn DisplayMemberBinding="{Binding Path=Pred}" Width="200">Ожидаемый процент</GridViewColumn>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
+                    <ListBox x:Name="lbQue" Grid.Column="0" Margin="10,10,10,10" Grid.ColumnSpan="2"/>
+                    <Grid Grid.Column="2">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <TextBox x:Name="tbKeyValue" Margin="10,20" Grid.Row="0"/>
+                        <Button Content="Добавить" Margin="10" Grid.Row="1" Click="Button_Click_Add"/>
+                        <Button Content="Соединить и отсортировать" Margin="10" Grid.Row="2" Click="Button_Click_SortAndMerge"/>
+                        <TextBlock x:Name="tbResultQueu" Grid.Row="3" Margin="10"/>
+                    </Grid>
                 </Grid>
             </TabItem>
         </TabControl>
